--- a/public/css/local.css
+++ b/public/css/local.css
@@ -13,12 +13,22 @@ header a {
     height: 0;
 }
 
-.input-modes {
-    height: 100px;
-}
+.top-m-1 { margin-top: 1rem; }
+.top-m-1-5 { margin-top: 1.5rem; }
+.top-m-2 { margin-top: 2rem; }
+.bot-m-1 { margin-bottom: 1rem; }
+.bot-m-1-5 { margin-bottom: 1.5rem; }
+.bot-m-2 { margin-bottom: 2rem; }
+
+.top-p-1 { padding-top: 1rem; }
+.top-p-1-5 { padding-top: 1.5rem; }
+.top-p-2 { padding-top: 2rem; }
+.bot-p-1 { padding-bottom: 1rem; }
+.bot-p-1-5 { padding-bottom: 1.5rem; }
+.bot-p-2 { padding-bottom: 2rem; }
 
 .view-container {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
 }
 
 .request-id-wrapper {
@@ -33,8 +43,17 @@ header a {
     display: block;
 }
 
+.input-mode {
+    height: 100px;
+}
+
 #input-mode-controller {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+#my-requests-view,
+#my-requests-list {
+    display: none;
 }
 
 #in-progress-view-container {
@@ -43,8 +62,18 @@ header a {
 
 #results-view-container {
     display: none;
+    padding-bottom: 2rem;
 }
 
 #upload-text-container {
     display: none;
+}
+
+#xaxis .domain {
+    fill: none;
+    stroke: #000;
+}
+
+#xaxis text, #yaxis text {
+    font-size: 12px;
 }
